# Garagem

./: .pdm-python  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_alter_vehicle_accessories.py  0003_alter_vehicle_accessories.py  0004_rename_description_color_name_alter_customer_cars.py
